# aws-serverless-etl-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
events/: s3-put-event.json  sqs-dlq-event.json
events/sample-data/: orders-with-errors.csv  orders.csv  orders.json
infra/: cloudwatch.tf  dynamodb.tf  iam.tf  lambda.tf  outputs.tf  providers.tf  s3.tf  sns.tf  sqs.tf  terraform.tfvars.example  variables.tf
src/functions/alert/: handler.py
src/functions/ingest/: handler.py
src/shared/: __init__.py  dynamo.py  logger.py  s3_utils.py  schemas.py
tests/: conftest.py  helpers.py  test_alert_handler.py  test_dynamo.py  test_ingest_handler.py  test_s3_utils.py  test_schemas.py
