[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-serverless-etl-pipeline"
version = "1.0.0"
description = "Event-driven serverless ETL pipeline on AWS: S3, Lambda, DynamoDB, SQS, SNS, and Terraform"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Wajahat Uddin Syed" }]
requires-python = ">=3.12"
dependencies = [
    # boto3 is provided by the Lambda runtime; pinned here for local parity.
    "boto3>=1.34,<2",
]

[project.optional-dependencies]
dev = [
    "moto[s3,dynamodb]>=5.0,<6",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.setuptools]
# The repo is deployed as Lambda zips, not installed as a package; keeping
# the package list empty makes `pip install -e .[dev]` a dependency-only step.
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint.isort]
known-first-party = ["shared", "functions"]
